--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,30 @@
-== README
+== Bump
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Bump is a social networking site built as an independant project. The website is built on Ruby on Rails and other resources that are available for free on the internet.
 
-Things you may want to cover:
+Resources used:
+<p>
+Bootstrap - to make sure the website looked pretty without too much work
+Ruby on Rails - for rapid development due to limited resources
+Jquery - To make things pretty
 
-* Ruby version
+</p>
 
-* System dependencies
+Bump is stll unders construction, but once finished, we will be able to function like a full fledged social network.
 
-* Configuration
+Things We Want To Do:
 
-* Database creation
+* User Creation
+* User Deletion
+* Post Creation
+* Post Deletion
+* Post Ranking (based on popularity)
 
-* Database initialization
+<tt>
+     Ruby 2.3.0p0 (2015-12-25 revision 53290) [x86_64-linux]
+    Rails 4.2.5
+Bootstrap 3.3.7
 
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+</tt>
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
